--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,12 +21,12 @@ android {
     buildTypes {
         release {
             shrinkResources = true
-            minifyEnabled = true
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
         debug {
             shrinkResources = false
-            minifyEnabled = false
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
